*New functions added         *Grant Admin Status 	*Remove Admin Status *Changes to the show page 	*Grant Admin buttons 	*Remove Admin buttons

--- a/src/Abe/loginBundle/Resources/views/user2/edit.html.twig
+++ b/src/Abe/loginBundle/Resources/views/user2/edit.html.twig
@@ -16,6 +16,7 @@
                     <a  href="{{ path('main_user2_show', {id: app.user.id}) }}"> Back to User info</a>
                 </li>
                 <li>{{ form(delete_form) }}</li>
+                <li>{{ form(grantAdmin_form) }}</li>
             </ul>
         </div>
     </div>
