--- a/src/Abe/loginBundle/Resources/views/user2/show.html.twig
+++ b/src/Abe/loginBundle/Resources/views/user2/show.html.twig
@@ -58,6 +58,8 @@
         </li>
     {% endif %}
     <li>{{ form(delete_form) }}</li>
+    <li>{{ form(grantAdmin_form) }}</li>
+    <li>{{ form(removeAdmin_form) }}</li>
 </ul>
 </div>
 {% endblock %}
