**Implemented new role 'ROLE_TEST' 	*Test role give acces to view everything a admin could 	*Test role dose not grant premissons to make any changes **Updated buttons and links 	*Grant admin only apears when the user is not admin 	*Remove Admin only apears when the user is admin 	*ROLE_USER no longer has links that they do not have access to

--- a/src/Abe/loginBundle/Resources/views/login/homepage.html.twig
+++ b/src/Abe/loginBundle/Resources/views/login/homepage.html.twig
@@ -23,6 +23,9 @@
     {% if is_granted('ROLE_ADMIN') %}
             <p> Since you are an Admin you can change all the users data  <a class="btn btn-danger btn-sm  pull-right" href="{{ path('main_user2') }}"> Edit</a>  </p>
     {% endif %}
+    {% if is_granted('ROLE_TEST') %}
+            <p> Since you are an Test user you can view all the users data but depending on your other roles you may not have permissons to change anything  <a class="btn btn-danger btn-sm  pull-right" href="{{ path('main_user2') }}"> Edit</a>  </p>
+    {% endif %}
         </div>
         </div>
     {% else %}
