--- a/src/Abe/loginBundle/Resources/views/user2/show.html.twig
+++ b/src/Abe/loginBundle/Resources/views/user2/show.html.twig
@@ -23,32 +23,42 @@
             <tr>
                 <th>Roles</th>
                 <td>
+                    {% set admin = '' %}
                     {% for roles in rolecollection %}
                         <li>{{roles.role}}</li>
-                       
+                        
+                       {% if(roles.role == 'ROLE_ADMIN') %}
+                            {% set admin = 'true' %}
+                       {% endif %}
                     {% endfor %}
+                    
+                    
                 </td>
             </tr>
         </tbody>
     </table>
 
         <ul class="record_actions">
+    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_TEST') %}
     <li>
         <a href="{{ path('main_user2') }}">
             Back to the list
         </a>
     </li>
+    {% endif %}
     <li>
         <a href="{{ path('main_user2_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
-    {% if app.user.id == entity.id  %}
-        <li>
-            <a class="btn btn-default" href="#">
-                Request Super Admin Privliages
-            </a>
-        </li>
+    {% if is_granted('ROLE_ADMIN') %}
+        {% if app.user.id == entity.id  %}
+            <li>
+                <a class="btn btn-default" href="#">
+                    Request Super Admin Privliages
+                </a>
+            </li>
+        {% endif %}
     {% endif %}
     {% if app.user.id == entity.id %}
         <li>
@@ -57,9 +67,17 @@
             </a>
         </li>
     {% endif %}
-    <li>{{ form(delete_form) }}</li>
-    <li>{{ form(grantAdmin_form) }}</li>
-    <li>{{ form(removeAdmin_form) }}</li>
+    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_TEST') %}
+        <li>{{ form(delete_form) }}</li>
+        {% if admin == true %}
+            <li>{{ form(removeAdmin_form) }}</li>
+        {% else %}
+            <li>{{ form(grantAdmin_form) }}</li>
+        {% endif %}
+    {% endif %}
+        
+        
+    
 </ul>
 </div>
 {% endblock %}
