--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -8,6 +8,7 @@
           </div>
           {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             <a class="btn btn-primary  pull-right" href="{{ path('logout2') }}"> Logout</a>
+            <p style="margin-right:10px" class="pull-right h4 text-primary"> Loged in as {{app.user.username}} </p>
           {% else %}
              <a class="btn btn-default  pull-right" href="{{ path('login') }}"> Login</a> 
          {% endif %}
