--- a/src/Abe/loginBundle/Resources/public/css/homepage.css
+++ b/src/Abe/loginBundle/Resources/public/css/homepage.css
@@ -1,8 +1,11 @@
 body {
-    background-image: url("../images/fft-back.png.png"); 
-    background-size:   cover;                      
-    background-repeat: no-repeat;
-    background-position: center -140px;;    
+    
+   background: url("../images/fft-back.png.png") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+     
     
 } 
 
