* Plain password is now a feild in the edit form * Plain password feild added to entity 	*This fixs bug where password feild would get updated with encryped password

--- a/src/Abe/loginBundle/Resources/views/user2/index.html.twig
+++ b/src/Abe/loginBundle/Resources/views/user2/index.html.twig
@@ -22,6 +22,7 @@
             <tr>
                 <th>Id</th>
                 <th>Username</th>
+                <th>Email</th>
                 <th>Password</th>
                 <th>Roles</th>
                 <th>Actions</th>
@@ -32,6 +33,7 @@
             <tr >
                 <td><a href="{{ path('main_user2_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.username }}</td>
+                <td>{{ entity.email }}</td>
                 <td>{{ entity.password }}</td>
                 <td> 
                     {% for roles in entity.roles %}
