--- a/src/Abe/loginBundle/Resources/views/user2/show.html.twig
+++ b/src/Abe/loginBundle/Resources/views/user2/show.html.twig
@@ -17,6 +17,10 @@
                 <td>{{ entity.username }}</td>
             </tr>
             <tr>
+                <th>Email</th>
+                <td>{{ entity.email }}</td>
+            </tr>
+            <tr>
                 <th>Password</th>
                 <td>{{ entity.password }}</td>
             </tr>
