--- a/src/Abe/loginBundle/Resources/views/user2/show.html.twig
+++ b/src/Abe/loginBundle/Resources/views/user2/show.html.twig
@@ -79,7 +79,7 @@
             <li>{{ form(grantAdmin_form) }}</li>
         {% endif %}
     {% endif %}
-        
+        {{ form(Roles_form) }}
         
     
 </ul>
