--- a/src/Abe/loginBundle/Resources/views/login/homepage.html.twig
+++ b/src/Abe/loginBundle/Resources/views/login/homepage.html.twig
@@ -1,16 +1,22 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
+{% for flashMessage in app.session.flashbag.get('registered') %}
+        <div class="flash-notice alert alert-success col-xs-5 col-xs-offset-4   row text-center">
+            {{ flashMessage }}
+        </div>
+{% endfor %}
 {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="flash-notice alert alert-danger col-xs-5 col-xs-offset-4   row text-center">
             {{ flashMessage }}
         </div>
 {% endfor %}
 <div class="col-xs-12"></div>
-<div class="col-xs-5 col-xs-offset-4" >
+<div class="col-md-5 col-md-offset-4 col-sm-12" >
     <div class="well well-lg">
         <h1 class="text-center">The Home Page </h1> 
     </div>
+    
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         
         <div class="panel panel-default">
@@ -24,6 +30,7 @@
     {% if is_granted('ROLE_ADMIN') %}
             <p> Since you are an Admin you can change all the users data  <a class="btn btn-danger btn-sm  pull-right" href="{{ path('main_user2') }}"> Edit</a>  </p>
             <p> Change roles here  <a class="btn btn-warning  btn-sm pull-right" href="{{ path('main_user2_roles', {id: app.user.id}) }}"> Change Roles</a>  </p>
+            
     
     
     {% elseif is_granted('ROLE_TEST') %}
