--- a/src/Abe/loginBundle/Resources/views/login/register.html.twig
+++ b/src/Abe/loginBundle/Resources/views/login/register.html.twig
@@ -4,11 +4,9 @@
 
 {% block body %}
 <div class="col-xs-push-4 col-xs-4 well">
-{{form_start(form)}}
+{{form(form)}}
 
-{{form_end(form)}}
+
 </div>
-<div class="col-xs-12">
-<h1>Welcome to the login:register page</h1>
-</div>
+
 {% endblock %}
